--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,5 +5,18 @@
 @import "minima";
 
 body {
-    background: yellow;
+    background: white;
+}
+
+section {
+	min-height: 90vh;
+	&#about {
+		background: gray;
+	}
+	&#offer {
+		background: red;
+	}
+	&#contact {
+		background: wheat;
+	}
 }
