bit of styling, structure

--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -1,96 +1,10 @@
-<section id="about" class="scroll-section">
-	<div class="home">
-		<h2>Malwina - Translator & Interpreter xxx</h2>
-
-
-		<svg 
-				version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="280px"
-				height="235px" viewBox="0 0 280 235" enable-background="new 0 0 280 235" xml:space="preserve">
-				<g id="fish_bgr">
-						<polygon fill="#C1272D" points="135.9,228 135.1,228 120.9,214.9 137.6,181 	"/>
-						<path id="ryj_closed" fill="#ED1C24" d="M49.6,167 98.7,183.4 103.6,185 104.9,184.6 106.9,188.7 
-						99.4,191.5 42.7,175.4 59.5,172.7 42.8,175.4 6,165 6,165Z 	">
-								<animate dur="4s" repeatCount="indefinite" attributeName="d" values="
-										M49.6,167 98.7,183.4 103.6,185 104.9,184.6 106.9,188.7 
-										99.4,191.5 42.7,175.4 59.5,172.7 42.8,175.4 6,165 6,165Z;
-										M49.6,167 98.7,183.4 103.6,185 104.9,184.6 106.9,188.7 99.4,191.5 51.3,177.9 
-										59.5,172.7 42.8,175.4 6,165 6,165Z;                                                                     
-										M49.6,167 98.7,183.4 103.6,185 104.9,184.6 106.9,188.7 
-										99.4,191.5 42.7,175.4 59.5,172.7 42.8,175.4 6,165 6,165Z;">
-								</animate>
-						</path>
-						<path fill="#F15A24" d="M224.1,130l41.7,11.6c0,0-125.3,33.7-125.3,33.7l-37.2,10.1l-15.9-6.6l5.1-31.5l8.4-52L224.1,130z"/>
-						<polygon fill="#C1272D" points="103.6,182.1 98.7,183.4 103.6,182.1 	"/>
-						<polygon fill="#C1272D" points="118.1,148.4 118.1,148.4 95.1,165 105,184.8 103.2,185.4 49.6,167 86.7,168.8 87.4,165 89.6,165 
-										92.4,147.2 	"/>
-						<path fill="#F15A24" d="M140.4,175.2L140.4,175.2l-19.5,39.8l-2.8-3.9l19.5-39.7C137.6,171.3,140.4,174.9,140.4,175.2"/>
-						<polyline fill="#ED1C24" points="137.6,171.3 137.6,171.3 118.1,211.1 95.1,165 118.1,148.4 118.1,148.4 	"/>
-						<polygon fill="#911D22" points="87.4,165 86.7,168.8 49.6,167 6,165 6,165 	"/>
-						<polygon fill="#ED1C24" points="92.4,147.2 89.6,165 6,165 6,164.7 100.8,95.2 	"/>
-						<path fill="#C1272D" d="M265.7,141.5l9.2,49l-54.6-36.9c0,0,0,0,0,0"/>
-						<polygon fill="#ED1C24" points="261.9,140.6 221.3,129.3 264.6,96.5 	"/>
-				</g>
-				<g id="eye">
-						<g>
-								<ellipse fill="#FFFFFF" cx="74.8" cy="144.8" rx="5.8" ry="5.3"/>
-								<ellipse fill="black" cx="73.2" cy="144.8" rx="3" ry="2.8">
-										<animate 
-												id="anim1"
-												attributeName="cx"
-												dur="1s" 
-												from="73.2" 
-												to="75.2" 
-												begin="0s; anim3.end+1s"
-												fill="freeze"
-										/>
-										<animate id="anim2"
-												attributeName="cy"
-												dur="1s" 
-												from="144.8" 
-												to="143.8" 
-												begin="anim1.end+1s"
-												fill="freeze"
-										/>
-										<animate id="anim3"
-												attributeName="cx"
-												dur="1s" 
-												from="75.2" 
-												to="73.2" 
-												begin="0s; anim2.end+1s"
-												fill="freeze"
-										/>
-								</ellipse>
-				</g>
-				</g>
-				<g id="bubble">
-						<ellipse fill="#E2E2E2" fill-opacity="0.5" cx="48.3" ry="173.5" rx="0" ry="0">
-								<animate
-										attributeName="cy" 
-										dur="4s" 
-										from="173.5" 
-										to="10" 
-										begin="1.5s"
-										repeatCount="indefinite"
-								/>
-								<animate
-										attributeName="ry" 
-										dur="4s" 
-										from="1" 
-										to="18"
-										begin="1.5s"
-										repeatCount="indefinite" 
-								/>
-								<animate
-										attributeName="rx" 
-										dur="4s" 
-										from="1" 
-										to="20"
-										begin="1.5s"
-										repeatCount="indefinite"
-								/>
-						</ellipse>
-				</g>
-		</svg>
-
-	</div>
-</section>
+<div class="wrapper " id="about">
+	<section class="scroll-section">
+		<div class="home">
+			<h2>Translator & Interpreter</h2>
+			<p>
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+			</p>
+		</div>
+	</section>
+</div>
