--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,36 +1,130 @@
 <header class="site-header">
+  <div class="header-wrapper">
 
-    <div class="wrapper">
-      {%- assign default_paths = site.pages | map: "path" -%}
-      {%- assign page_paths = site.header_pages | default: default_paths -%}
-      {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-      <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-  
-      {%- if titles_size > 0 -%}
-        <nav class="site-nav">
-          <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-          <label for="nav-trigger">
-            <span class="menu-icon">
-              <svg viewBox="0 0 18 15" width="18px" height="15px">
-                <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
-              </svg>
-            </span>
-          </label>
-  
-          <div class="trigger">
-            <ul class="navbar">
-                <li class="nav">
-                  <a class="page-scroll" href="#about">About Me</a>
-                </li>
-                <li class="nav">
-                  <a class="page-scroll" href="#offer">Offer</a>
-                </li>
-                <li class="nav">
-                  <a class="page-scroll" href="#contact">Contact</a>
-                </li>
-              </ul>
-          </div>
-        </nav>
-      {%- endif -%}
-    </div>
-  </header>
+
+
+    {%- assign default_paths = site.pages | map: "path" -%}
+    {%- assign page_paths = site.header_pages | default: default_paths -%}
+    {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+
+
+
+    {%- if titles_size > 0 -%}
+      <nav class="site-nav">
+        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+        <label for="nav-trigger">
+          <span class="menu-icon">
+            <svg viewBox="0 0 18 15" width="18px" height="15px">
+              <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
+            </svg>
+          </span>
+        </label>
+
+        <div class="trigger">
+          <ul class="navbar">
+              <li class="nav">
+                <a class="page-scroll page-link" href="#about">About Me</a>
+              </li>
+              <li class="nav">
+                <a class="page-scroll page-link" href="#offer">Offer</a>
+              </li>
+              <li class="nav">
+                <a class="page-scroll page-link" href="#contact">Contact</a>
+              </li>
+            </ul>
+        </div>
+      </nav>
+    {%- endif -%}
+
+    <svg 
+    version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="280px"
+    height="235px" viewBox="0 0 280 235" enable-background="new 0 0 280 235" xml:space="preserve">
+    <g id="fish_bgr">
+        <polygon fill="#C1272D" points="135.9,228 135.1,228 120.9,214.9 137.6,181 	"/>
+        <path id="ryj_closed" fill="#ED1C24" d="M49.6,167 98.7,183.4 103.6,185 104.9,184.6 106.9,188.7 
+        99.4,191.5 42.7,175.4 59.5,172.7 42.8,175.4 6,165 6,165Z 	">
+            <animate dur="4s" repeatCount="indefinite" attributeName="d" values="
+                M49.6,167 98.7,183.4 103.6,185 104.9,184.6 106.9,188.7 
+                99.4,191.5 42.7,175.4 59.5,172.7 42.8,175.4 6,165 6,165Z;
+                M49.6,167 98.7,183.4 103.6,185 104.9,184.6 106.9,188.7 99.4,191.5 51.3,177.9 
+                59.5,172.7 42.8,175.4 6,165 6,165Z;                                                                     
+                M49.6,167 98.7,183.4 103.6,185 104.9,184.6 106.9,188.7 
+                99.4,191.5 42.7,175.4 59.5,172.7 42.8,175.4 6,165 6,165Z;">
+            </animate>
+        </path>
+        <path fill="#F15A24" d="M224.1,130l41.7,11.6c0,0-125.3,33.7-125.3,33.7l-37.2,10.1l-15.9-6.6l5.1-31.5l8.4-52L224.1,130z"/>
+        <polygon fill="#C1272D" points="103.6,182.1 98.7,183.4 103.6,182.1 	"/>
+        <polygon fill="#C1272D" points="118.1,148.4 118.1,148.4 95.1,165 105,184.8 103.2,185.4 49.6,167 86.7,168.8 87.4,165 89.6,165 
+                92.4,147.2 	"/>
+        <path fill="#F15A24" d="M140.4,175.2L140.4,175.2l-19.5,39.8l-2.8-3.9l19.5-39.7C137.6,171.3,140.4,174.9,140.4,175.2"/>
+        <polyline fill="#ED1C24" points="137.6,171.3 137.6,171.3 118.1,211.1 95.1,165 118.1,148.4 118.1,148.4 	"/>
+        <polygon fill="#911D22" points="87.4,165 86.7,168.8 49.6,167 6,165 6,165 	"/>
+        <polygon fill="#ED1C24" points="92.4,147.2 89.6,165 6,165 6,164.7 100.8,95.2 	"/>
+        <path fill="#C1272D" d="M265.7,141.5l9.2,49l-54.6-36.9c0,0,0,0,0,0"/>
+        <polygon fill="#ED1C24" points="261.9,140.6 221.3,129.3 264.6,96.5 	"/>
+    </g>
+    <g id="eye">
+        <g>
+            <ellipse fill="#FFFFFF" cx="74.8" cy="144.8" rx="5.8" ry="5.3"/>
+            <ellipse fill="black" cx="73.2" cy="144.8" rx="3" ry="2.8">
+                <animate 
+                    id="anim1"
+                    attributeName="cx"
+                    dur="1s" 
+                    from="73.2" 
+                    to="75.2" 
+                    begin="0s; anim3.end+1s"
+                    fill="freeze"
+                />
+                <animate id="anim2"
+                    attributeName="cy"
+                    dur="1s" 
+                    from="144.8" 
+                    to="143.8" 
+                    begin="anim1.end+1s"
+                    fill="freeze"
+                />
+                <animate id="anim3"
+                    attributeName="cx"
+                    dur="1s" 
+                    from="75.2" 
+                    to="73.2" 
+                    begin="0s; anim2.end+1s"
+                    fill="freeze"
+                />
+            </ellipse>
+    </g>
+    </g>
+    <g id="bubble">
+        <ellipse fill="#E2E2E2" fill-opacity="0.5" cx="48.3" ry="173.5" rx="0" ry="0">
+            <animate
+                attributeName="cy" 
+                dur="4s" 
+                from="173.5" 
+                to="10" 
+                begin="1.5s"
+                repeatCount="indefinite"
+            />
+            <animate
+                attributeName="ry" 
+                dur="4s" 
+                from="1" 
+                to="18"
+                begin="1.5s"
+                repeatCount="indefinite" 
+            />
+            <animate
+                attributeName="rx" 
+                dur="4s" 
+                from="1" 
+                to="20"
+                begin="1.5s"
+                repeatCount="indefinite"
+            />
+        </ellipse>
+    </g>
+    </svg>
+
+  </div>
+</header>
