--- a/_includes/offer.html
+++ b/_includes/offer.html
@@ -1,3 +1,5 @@
-<section class="scroll-section" id="offer">
-    <div>offer</div>
-</section>
+<div class="wrapper " id="offer">
+	<section class="scroll-section">
+			<h2>What I offer</h2>
+	</section>
+</div>
