--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,3 +1,5 @@
-<section class="scroll-section" id="contact">
-    <div>contact</div>
-</section>
+<div class="wrapper " id="contact">
+	<section class="scroll-section" >
+			<h2>Feel free to contact us</h2>
+	</section>
+</div>
