--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script src="assets/js/scroll.js"></script>
-  <script src="assets/js/scrollify.js"></script>
+  <!-- <script src="assets/js/scrollify.js"></script>
 
   <script>
       $(function () {
@@ -43,4 +43,4 @@
               section: ".scroll-section",
           });
       });
-  </script>
+  </script> -->
