stle for active nav list added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,13 +23,13 @@
 
         <div class="trigger">
           <ul class="navbar">
-              <li class="nav">
+              <li class="nav js-acive">
                 <a class="page-scroll page-link" href="#about">About Me</a>
               </li>
-              <li class="nav">
+              <li class="nav js-acive">
                 <a class="page-scroll page-link" href="#offer">Offer</a>
               </li>
-              <li class="nav">
+              <li class="nav js-acive">
                 <a class="page-scroll page-link" href="#contact">Contact</a>
               </li>
             </ul>
