--- a/_includes/offer.html
+++ b/_includes/offer.html
@@ -1,5 +1,5 @@
 <div class="wrapper " id="offer">
 	<section class="scroll-section">
-			<h2>What I offer</h2>
+			<h2>What do I offer?</h2>
 	</section>
 </div>
